<resources>
    <string name="app_name">MyCV</string>

    <string name="title_about">About</string>
    <string name="title_experience">Experience</string>
    <string name="title_projects">Projects</string>

    <string name="action_call_me">Call me</string>
    <string name="action_message">Message</string>
    <string name="action_explore">Explore Espeo</string>
    <string name="action_navigate">Navigate</string>
    <string name="action_try_again">Try again</string>

    <string name="skills">Skills</string>
    <string name="interests">Interests</string>
    <string name="full_name">Maciej Nowak</string>
    <string name="occupation">Android Developer</string>

    <string name="skills_details">I\'m Java Developer focused on Android platform and User Experience.
        Hothead in mobile technologies. Placetag co-founder and Sealcode.org member.
        I develop using Android Studio and Git control version.
        Also I have a little bit experience in technologies and tools such as:
        Python, C#, C++, HTML, CSS, Joomla, Photoshop.
    </string>

    <string name="interests_details">I discover the world by traveling, getting know the people,
        eating new things and learning foreign languages.
        Taking photo is the way to keep all memories in my mind.
        Also I try to life healthy by cooking and playing sport especially football.
        I\'m a big fan o AC Milan and Poland national team in every sport.
        I listen to music every day and in free time watch movies.
    </string>

    <string name="accept_permissions">Please agree all request permission to navigate to Espeo</string>
    <string name="send_mail">Send email...</string>

    <string name="network_turn_on">Turn on internet connection and try again.</string>
    <string name="navigate_located">Espeo Software is away</string>
    <string name="navigate_distance_unknown">Distance unknown</string>
    <string name="navigate_no_data">No data available</string>

    <string name="press_back_again">"Press back once again to exit!"</string>

</resources>
