<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.florent37.diagonallayout.DiagonalLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_background_image_height"
                app:diagonal_angle="15"
                diagonal:diagonal_direction="left"
                diagonal:diagonal_position="bottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="@dimen/about_padding_left"
                    android:layout_marginTop="@dimen/about_name_padding_top"
                    style="@style/about_name"
                    android:text="@string/full_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginTop="@dimen/about_occupation_padding_top"
                    android:layout_marginLeft="@dimen/about_padding_left"
                    style="@style/about_occupation"
                    android:text="@string/occupation"/>

            </com.github.florent37.diagonallayout.DiagonalLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/about_head_image_size"
                android:layout_height="@dimen/about_head_image_size"
                android:layout_marginLeft="@dimen/about_padding_left"
                android:layout_gravity="bottom|left"
                android:src="@drawable/about_head"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right">

                <Button
                    android:id="@+id/call_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:paddingRight="@dimen/text_margin"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/action_call_me"/>

                <Button
                    android:id="@+id/message_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:paddingRight="@dimen/text_margin"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/action_message" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_title_padding_bottom"
                style="@style/about_title"
                android:text="@string/skills" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_details_padding_bottom"
                style="@style/about_text"
                android:text="@string/skills_details"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_title_padding_bottom"
                style="@style/about_title"
                android:text="@string/interests"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_details_padding_bottom"
                style="@style/about_text"
                android:text="@string/interests_details"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>